implement getTicketsByStatusId and getTicketsByBoardId
