# diligent-academy-assessments/final/backend/src/openapi-spec/openapi-spec.yml
@@ -182,29 +182,7 @@ paths:
           description: Board not found
         "500":
           description: Internal server error
-  /boards/{board_id}/statuses/{status_id}/tickets:
-    get:
-      summary: Get all tickets for a status
-      operationId: getTicketsByStatusId
-      parameters:
-        - in: path
-          name: status_id
-          required: true
-          schema:
-            type: integer
-      responses:
-        "200":
-          description: A list of tickets for a status
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/Ticket"
-        "404":
-          description: Board not found
-        "500":
-          description: Internal server error
+
   /statuses:
     get:
       summary: Get all statuses
@@ -308,6 +286,29 @@ paths:
           description: Bad request
         "404":
           description: Status not found
+        "500":
+          description: Internal server error
+  /statuses/{status_id}/tickets:
+    get:
+      summary: Get all tickets for a status
+      operationId: getTicketsByStatusId
+      parameters:
+        - in: path
+          name: status_id
+          required: true
+          schema:
+            type: integer
+      responses:
+        "200":
+          description: A list of tickets for a status
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Ticket"
+        "404":
+          description: Board not found
         "500":
           description: Internal server error
   /tickets:
