# diligent-academy-assessments/final/backend/src/openapi-spec/types.ts
@@ -108,23 +108,6 @@ export interface paths {
         patch?: never;
         trace?: never;
     };
-    "/boards/{board_id}/statuses/{status_id}/tickets": {
-        parameters: {
-            query?: never;
-            header?: never;
-            path?: never;
-            cookie?: never;
-        };
-        /** Get all tickets for a status */
-        get: operations["getTicketsByStatusId"];
-        put?: never;
-        post?: never;
-        delete?: never;
-        options?: never;
-        head?: never;
-        patch?: never;
-        trace?: never;
-    };
     "/statuses": {
         parameters: {
             query?: never;
@@ -173,6 +156,23 @@ export interface paths {
         post?: never;
         /** Soft delete a status by ID */
         delete: operations["deleteStatus"];
+        options?: never;
+        head?: never;
+        patch?: never;
+        trace?: never;
+    };
+    "/statuses/{status_id}/tickets": {
+        parameters: {
+            query?: never;
+            header?: never;
+            path?: never;
+            cookie?: never;
+        };
+        /** Get all tickets for a status */
+        get: operations["getTicketsByStatusId"];
+        put?: never;
+        post?: never;
+        delete?: never;
         options?: never;
         head?: never;
         patch?: never;
@@ -586,42 +586,6 @@ export interface operations {
             };
         };
     };
-    getTicketsByStatusId: {
-        parameters: {
-            query?: never;
-            header?: never;
-            path: {
-                status_id: number;
-            };
-            cookie?: never;
-        };
-        requestBody?: never;
-        responses: {
-            /** @description A list of tickets for a status */
-            200: {
-                headers: {
-                    [name: string]: unknown;
-                };
-                content: {
-                    "application/json": components["schemas"]["Ticket"][];
-                };
-            };
-            /** @description Board not found */
-            404: {
-                headers: {
-                    [name: string]: unknown;
-                };
-                content?: never;
-            };
-            /** @description Internal server error */
-            500: {
-                headers: {
-                    [name: string]: unknown;
-                };
-                content?: never;
-            };
-        };
-    };
     getStatuses: {
         parameters: {
             query?: never;
@@ -803,6 +767,42 @@ export interface operations {
                 content?: never;
             };
             /** @description Status not found */
+            404: {
+                headers: {
+                    [name: string]: unknown;
+                };
+                content?: never;
+            };
+            /** @description Internal server error */
+            500: {
+                headers: {
+                    [name: string]: unknown;
+                };
+                content?: never;
+            };
+        };
+    };
+    getTicketsByStatusId: {
+        parameters: {
+            query?: never;
+            header?: never;
+            path: {
+                status_id: number;
+            };
+            cookie?: never;
+        };
+        requestBody?: never;
+        responses: {
+            /** @description A list of tickets for a status */
+            200: {
+                headers: {
+                    [name: string]: unknown;
+                };
+                content: {
+                    "application/json": components["schemas"]["Ticket"][];
+                };
+            };
+            /** @description Board not found */
             404: {
                 headers: {
                     [name: string]: unknown;
